--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
   compileSdkVersion 25
-  buildToolsVersion "25.0.0"
+  buildToolsVersion "25.0.2"
   defaultConfig {
     applicationId "com.cwoodward.okbucktestproject"
-    minSdkVersion 15
+    minSdkVersion 16
     targetSdkVersion 25
     versionCode 1
     versionName "1.0"
@@ -14,7 +14,7 @@ android {
 
   signingConfigs {
     debug {
-      storeFile file("external/test_keystore.jks")
+      storeFile file("external/debug_keystore.jks")
       storePassword "testbuild"
       storeType "JKS"
       keyAlias "testbuild"
@@ -25,7 +25,6 @@ android {
   buildTypes {
     release {
       minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
       signingConfig signingConfigs.debug
     }
   }
@@ -33,12 +32,12 @@ android {
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile 'com.android.support:appcompat-v7:25.0.0'
+  compile 'com.android.support:appcompat-v7:25.1.0'
   testCompile 'junit:junit:4.12'
+
+  compile project(':app-library')
 
   compile deps.dagger2.dagger2
   annotationProcessor deps.dagger2.dagger2compiler
-
-//  compile 'com.google.dagger:dagger:2.7'
-//  annotationProcessor 'com.google.dagger:dagger-compiler:2.7'
+  testCompile deps.dagger2.dagger2Test
 }
