--- a/build.gradle
+++ b/build.gradle
@@ -4,22 +4,19 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.3.0-beta3'
-    classpath 'com.uber:okbuck:0.17.3'
+    classpath 'com.android.tools.build:gradle:2.3.0'
+    classpath 'com.uber:okbuck:0.19.0'
   }
 }
 
 apply plugin: 'com.uber.okbuck'
 
 okbuck {
-  Set<Project> projects = new HashSet<>();
-  for (Project module : project.subprojects) {
-    if (module.getName().equals("app-library")) {
-      continue;
-    }
-    projects.add(module);
-  }
-  buckProjects = projects;
+  extraBuckOpts = [
+      'app': [
+          "android_binary": ["trim_resource_ids = True", "disable_pre_dex = True"]
+      ]
+  ]
 }
 
 allprojects { project ->
