--- a/app-library/src/main/AndroidManifest.xml
+++ b/app-library/src/main/AndroidManifest.xml
@@ -1,11 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.squareup.app_library">
 
-  <application android:allowBackup="true"
-      android:label="@string/app_name"
-      android:supportsRtl="true"
-  >
-
-  </application>
-
+  <activity
+      android:name="com.cwoodward.library.TestActivity">
+  </activity>
 </manifest>
