--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,6 @@ android {
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile 'com.android.support:appcompat-v7:25.2.0'
-  testCompile 'junit:junit:4.12'
-
-  compile project(':app-library')
-
-  compile deps.dagger2.dagger2
-  annotationProcessor deps.dagger2.dagger2compiler
-  testCompile deps.dagger2.dagger2Test
+  testCompile deps.junit
+  testCompile deps.robolectric
 }
