--- a/build.gradle
+++ b/build.gradle
@@ -5,18 +5,19 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:2.3.0'
-    classpath 'com.uber:okbuck:0.19.0'
+    classpath 'com.uber:okbuck:0.20.5'
   }
 }
 
 apply plugin: 'com.uber.okbuck'
 
 okbuck {
-  extraBuckOpts = [
-      'app': [
-          "android_binary": ["trim_resource_ids = True", "disable_pre_dex = True"]
-      ]
-  ]
+
+  test {
+    robolectric = true
+  }
+
+  extraBuckOpts = ['app': ["android_binary": ["trim_resource_ids = True"]]]
 }
 
 allprojects { project ->
